<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="compose_material_catalog">Compose Material Catalog</string>
    <string name="specifications">Specifications</string>
    <string name="compose_material_3">Compose Material 3</string>
    <string name="description">Description</string>
    <string name="experimental">Experimental</string>
    <string name="examples">Examples</string>
    <string name="no_examples">No examples</string>
    <string name="expressive_badge">Expr</string>
    <string name="unofficial">Unofficial</string>

    <string name="view_design_guidelines">View design guidelines</string>
    <string name="view_developer_docs">View developer docs</string>
    <string name="view_source_code">View source code</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="language">Language</string>
    <string name="language_follow_system">Follow system</string>
    <string name="language_simplified_chinese">简体中文</string>
    <string name="language_english">English</string>

    <string name="theme">Theme</string>
    <string name="expressive_theme_mode">Expressive theme mode</string>
    <string name="color_mode">Color mode</string>
    <string name="font_scale">Font scale</string>
    <string name="text_direction">Text direction</string>
    <string name="reset_all">Reset all</string>
    <string name="mark_expressive_components">Mark expressive components</string>
    <string name="show_only_expressive_components">Show only expressive components</string>
    <string name="warning">Warning</string>
    <string name="theme_change_warning">Setting a new Material theme will reset the catalog and progress will be lost. Please confirm before proceeding.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="option_system">System</string>
    <string name="option_ltr">Left to right</string>
    <string name="option_rtl">Right to left</string>
    <string name="option_baseline">Baseline</string>
    <string name="option_custom">Custom</string>
    <string name="option_dynamic">Dynamic (Android 12+)</string>
    <string name="option_light">Light</string>
    <string name="option_dark">Dark</string>
    <string name="option_expressive">Expressive</string>
    <string name="option_non_expressive">Non-expressive</string>

    <string name="carousel_image_1_description">A racecar</string>
    <string name="carousel_image_2_description">Dotonbori, Osaka</string>
    <string name="carousel_image_3_description">The Grand Canyon</string>
    <string name="carousel_image_4_description">A rock structure with its reflection mirrored over the sea</string>
    <string name="carousel_image_5_description">A car on a long stretch of desert road</string>

    <string name="back_button">Back</string>
    <string name="favorite_button">Pin screen</string>
    <string name="change_theme_button">Change theme</string>
    <string name="more_menu_button">More options</string>

    <string name="component_adaptive_name">Adaptive</string>
    <string name="component_adaptive_description">Adaptive scaffolds provide automatic layout adjustment for different window size classes and postures.\n\nNote: this sample is best experienced in a resizable emulator or on a foldable device.</string>
    <string name="component_badge_name">Badge</string>
    <string name="component_badge_description">A badge can contain dynamic information, such as a new notification or the number of pending requests. Badges can contain only an icon or a short text.</string>
    <string name="component_bottom_app_bar_name">Bottom App Bar</string>
    <string name="component_bottom_app_bar_description">A bottom app bar displays navigation and key actions at the bottom of mobile screens.</string>
    <string name="component_bottom_sheet_name">Bottom Sheet</string>
    <string name="component_bottom_sheet_description">Bottom sheets are surfaces containing supplementary content, anchored to the bottom of the screen.</string>
    <string name="component_buttons_name">Buttons</string>
    <string name="component_buttons_description">Buttons help people initiate actions, from sending an email to sharing a document or liking a post.</string>
    <string name="component_button_groups_name">Button Groups</string>
    <string name="component_button_groups_description">Button groups are containers for Material components that add an animation when pressed.</string>
    <string name="component_card_name">Card</string>
    <string name="component_card_description">Cards contain content and actions that communicate information about a subject.</string>
    <string name="component_carousel_name">Carousel</string>
    <string name="component_carousel_description">Carousels are stylized lists with viewing behavior suited to large images and other visually rich content.</string>
    <string name="component_checkboxes_name">Checkboxes</string>
    <string name="component_checkboxes_description">Checkboxes let users select one or more items from a set, or turn an option on or off.</string>
    <string name="component_chips_name">Chips</string>
    <string name="component_chips_description">Chips let users enter information, make selections, filter content, or trigger actions.</string>
    <string name="component_date_pickers_name">Date pickers</string>
    <string name="component_date_pickers_description">Date pickers let users select a date or a range of dates.</string>
    <string name="component_dialogs_name">Dialogs</string>
    <string name="component_dialogs_description">Dialogs provide important prompts in a user flow. They can require an action, communicate information, or help users complete a task.</string>
    <string name="component_extended_fab_name">Extended FAB</string>
    <string name="component_extended_fab_description">Extended FABs help people take primary actions. They are wider than FABs to accommodate a text label and a larger target area.</string>
    <string name="component_fab_name">Floating action buttons</string>
    <string name="component_fab_description">The FAB represents the most important action on a screen and keeps key actions within reach.</string>
    <string name="component_fab_menu_name">FAB Menu</string>
    <string name="component_fab_menu_description">The FAB Menu displays additional key actions when a FAB is clicked.</string>
    <string name="component_floating_toolbar_name">Floating Toolbar</string>
    <string name="component_floating_toolbar_description">A floating toolbar displays key actions above the content.</string>
    <string name="component_icon_buttons_name">Icon buttons</string>
    <string name="component_icon_buttons_description">Icon buttons let users take actions and make choices with a single tap.</string>
    <string name="component_lists_name">Lists</string>
    <string name="component_lists_description">Lists are continuous, vertical indexes of text or images.</string>
    <string name="component_loading_indicators_name">Loading indicators</string>
    <string name="component_loading_indicators_description">Loading indicators express an unspecified wait time or display the progress of a loading process.</string>
    <string name="component_menus_name">Menus</string>
    <string name="component_menus_description">Menus display a list of choices on temporary surfaces.</string>
    <string name="component_navigation_bar_name">Navigation bar</string>
    <string name="component_navigation_bar_description">Navigation bars provide a persistent and convenient way to switch between primary destinations in an app.</string>
    <string name="component_navigation_drawer_name">Navigation drawer</string>
    <string name="component_navigation_drawer_description">Navigation drawers provide ergonomic access to destinations in an app.</string>
    <string name="component_navigation_rail_name">Navigation rail</string>
    <string name="component_navigation_rail_description">Navigation rails provide access to primary destinations on tablet and desktop screens.</string>
    <string name="component_navigation_suite_name">Navigation Suite Scaffold</string>
    <string name="component_navigation_suite_description">Navigation Suite Scaffold wraps the supplied content and displays the appropriate navigation component for the current NavigationSuiteType.\n\nNote: this sample is best experienced in a resizable emulator or on a foldable device.</string>
    <string name="component_progress_indicators_name">Progress indicators</string>
    <string name="component_progress_indicators_description">Progress indicators express an unspecified wait time or display the progress of a process.</string>
    <string name="component_pull_to_refresh_name">Pull-to-Refresh Indicator</string>
    <string name="component_pull_to_refresh_description">Pull to refresh is a swipe gesture available at the beginning of lists, grids, and card collections where the most recent content appears.</string>
    <string name="component_radio_buttons_name">Radio buttons</string>
    <string name="component_radio_buttons_description">Radio buttons let users select one option from a set.</string>
    <string name="component_search_bars_name">Search bars</string>
    <string name="component_search_bars_description">Search bars let users enter a keyword or phrase and retrieve relevant information.</string>
    <string name="component_segmented_button_name">Segmented Button</string>
    <string name="component_segmented_button_description">Segmented buttons help people select options, switch views, or sort elements.</string>
    <string name="component_toggle_buttons_name">Toggle Buttons</string>
    <string name="component_toggle_buttons_description">Toggle buttons provide selectable buttons that animate when pressed.</string>
    <string name="component_sliders_name">Sliders</string>
    <string name="component_sliders_description">Sliders let users make selections from a range of values.</string>
    <string name="component_snackbars_name">Snackbars</string>
    <string name="component_snackbars_description">Snackbars provide brief messages about app processes at the bottom of the screen.</string>
    <string name="component_split_button_name">Split Button</string>
    <string name="component_split_button_description">Split buttons let users perform additional actions besides the main action.</string>
    <string name="component_switches_name">Switches</string>
    <string name="component_switches_description">Switches toggle a single setting on or off.</string>
    <string name="component_tabs_name">Tabs</string>
    <string name="component_tabs_description">Tabs organize content across different screens, data sets, and interactions.</string>
    <string name="component_text_fields_name">Text fields</string>
    <string name="component_text_fields_description">Text fields let users enter and edit text.</string>
    <string name="component_tooltips_name">Tooltips</string>
    <string name="component_tooltips_description">Tooltips draw the user’s attention to an anchor component.</string>
    <string name="component_time_picker_name">Time Picker</string>
    <string name="component_time_picker_description">Time pickers let users choose a time of day.</string>
    <string name="component_top_app_bar_name">Top app bar</string>
    <string name="component_top_app_bar_description">Top app bars display information and actions at the top of a screen.</string>
    <string name="component_material_shapes_name">Material Shapes</string>
    <string name="component_material_shapes_description">Material Shapes define the shapes of components.</string>
    <string name="component_swipe_to_dismiss_name">Swipe to Dismiss</string>
    <string name="component_swipe_to_dismiss_description">Swipe to dismiss is a gesture used to dismiss items in a list.</string>
</resources>
